--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 student.name = abhi
+
+#database specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/student_db
+spring.datasource.username=user1
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#hibernate specific properties
+#spring.jpa.database-platform=
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql: true
+
+server.port=8081
